Difficulty in aligning points of Stroke of type Curve #61138

Closed
opened 2019-02-02 16:20:16 +01:00 by Vic Jeong · 18 comments

System Information
Operating system: win10
Graphics card: GTX650

Blender Version
Broken: blender-2.80.0-git.4ef09cf937f2-windows64, 2018-2-2

Short description of error

  1. After using [Shift-RMB] to control symmetrically, can't transform points.
  2. Besides [Return], [LMB] executes the curved stroke.

Exact steps for others to reproduce the error
For [Select With: Left]

  1. File > New > Sculpting
  2. Stroke > Stroke method > Curve
  3. [Ctrl+RMB] at Sphere
  4. [Ctrl+RMB] at another place on Sphere
  5. Drag any handle point with [Shift+RMB]
  6. Can't drag any control point. Only handles.
**System Information** Operating system: win10 Graphics card: GTX650 **Blender Version** Broken: blender-2.80.0-git.4ef09cf937f2-windows64, 2018-2-2 **Short description of error** 1. After using [Shift-RMB] to control symmetrically, can't transform points. 2. Besides [Return], [LMB] executes the curved stroke. **Exact steps for others to reproduce the error** For [Select With: Left] 1) File > New > Sculpting 2) Stroke > Stroke method > Curve 3) [Ctrl+RMB] at Sphere 4) [Ctrl+RMB] at another place on Sphere 5) Drag any handle point with [Shift+RMB] 6) Can't drag any control point. Only handles.
Author

Added subscriber: @smartmon

Added subscriber: @smartmon

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Please provide an exact, detailed set of steps to reproduce this. It must be very detailed so that we can reproduce it.

Preferably also attach a blend file where the issues is visible.

Please provide an exact, detailed set of steps to reproduce this. It must be very detailed so that we can reproduce it. Preferably also attach a blend file where the issues is visible.

Added subscriber: @igrCaveman

Added subscriber: @igrCaveman

Same trouble. Sorry my bad English.
Steps to reproduce:
For [Select With: Left]

  1. File > New > Sculpting
  2. Stroke > Stroke method > Curve
  3. [Ctrl+RMB] at Sphere
  4. [Ctrl+RMB] at another place on Sphere
  5. Drag any handle point with [Shift+RMB]
  6. Can't drag any control point. Only handles.
    Control points become draggable again only after restarting Blender.
    But after using [Shift+RMB] problem repeats.
Same trouble. Sorry my bad English. Steps to reproduce: For [Select With: Left] 1) File > New > Sculpting 2) Stroke > Stroke method > Curve 3) [Ctrl+RMB] at Sphere 4) [Ctrl+RMB] at another place on Sphere 5) Drag any handle point with [Shift+RMB] 6) Can't drag any control point. Only handles. Control points become draggable again only after restarting Blender. But after using [Shift+RMB] problem repeats.

Added subscriber: @ReeceRobinson

Added subscriber: @ReeceRobinson

I see the same issue on my Mac Pro. Following the steps Igor provided reproduces the issue for me.

I used ⁨blender-2.80.0-git20190215.faa255c0a4e4-x86_64⁩ for this test.

I see the same issue on my Mac Pro. Following the steps Igor provided reproduces the issue for me. I used ⁨blender-2.80.0-git20190215.faa255c0a4e4-x86_64⁩ for this test.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-03-18 21:38:57 +01:00

Yes can reproduce too… will have a look at what happens exactly later.

Yes can reproduce too… will have a look at what happens exactly later.

Added subscriber: @AndreasErni

Added subscriber: @AndreasErni
Bastien Montagne was unassigned by Dalai Felinto 2019-12-23 16:35:16 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

I have re-triaged this report and can not reproduce it.
Can you please check if this is still an issue in latest build?
https://builder.blender.org/download/

I have re-triaged this report and can not reproduce it. Can you please check if this is still an issue in latest build? https://builder.blender.org/download/

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Brought back into the curfew. These reports were once confirmed. It is up to the development team to test in the original reported version. By doing so one is able to close the report right away (if can reproduce in old version but not in latest), or to ask for more information (though in this case even a developer managed to reproduce, so no point in moving the burden to the user and delaying this triaging even more).

Brought back into the curfew. These reports were once confirmed. It is up to the development team to test in the original reported version. By doing so one is able to close the report right away (if can reproduce in old version but not in latest), or to ask for more information (though in this case even a developer managed to reproduce, so no point in moving the burden to the user and delaying this triaging even more).
Germano Cavalcante changed title from Sculpt / Stroke Method / Curve to Difficulty in aligning points of Stroke of type Curve 2020-02-07 19:03:07 +01:00

This issue was referenced by 14d1dc5df5

This issue was referenced by 14d1dc5df565bdd3970579b31da9b2a26c306448

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-02-10 12:18:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61138
No description provided.